fixing toggle button

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,14 @@
   <body>
     <section class="container">
       <h1 id="myHeading" class="red">Den ultimata bucket-listan</h1>
-      <ul id="myBucketList"></ul>
+      <ul id="myBucketList">
+        <li>
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span> </label
+          >hej
+        </li>
+      </ul>
       <h2 id="mySecondHeading">Lägg till</h2>
       <input type="text" id="firstUserText" /><button id="userAddBucket">
         Add
