--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,24 @@
     <title>Bucket List</title>
     <link href="scss/main.scss" rel="stylesheet" />
     <script defer src="js/main.js" type="module"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="container">
-      <h1 id="myHeading">Den ultimata bucket-listan</h1>
+      <h1 id="myHeading" class="red">Den ultimata bucket-listan</h1>
       <ul id="myBucketList"></ul>
-      <h2 id="mySecondHeading">Lägg till nya</h2>
+      <h2 id="mySecondHeading" class="red">Lägg till nya</h2>
       <input
         type="text"
         id="inputBucketListItem"
         placeholder="The next adventure will be..."
       /><button id="addingBucketItem">Add</button>
-      <h2 id="myThirdHeading">Slutförda</h2>
+      <h2 id="myThirdHeading" class="red">Slutförda</h2>
       <ul id="completedBucketList"></ul>
     </section>
   </body>
