fixing final things

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,16 @@
     <section class="container">
       <h1 id="myHeading" class="red">Den ultimata bucket-listan</h1>
       <ul id="myBucketList"></ul>
+      <button type="button" id="btn-sort-ongoing">SORT ME!</button>
       <h2 id="mySecondHeading" class="red">Lägg till nya</h2>
       <input
         type="text"
         id="inputBucketListItem"
         placeholder="The next adventure will be..."
-      /><button id="addingBucketItem">Add</button>
+      /><button type="button" id="addingBucketItem">ADD!</button>
       <h2 id="myThirdHeading" class="red">Slutförda</h2>
       <ul id="completedBucketList"></ul>
+      <button type="button" id="btn-sort-completed">SORT ME!</button>
     </section>
   </body>
 </html>
