--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bucket List</title>
-    <link href="scss/main.scss" rel="stylesheet" />
-    <script defer src="js/main.js" type="module"></script>
+    <link href="./src/scss/main.scss" rel="stylesheet" />
+    <script defer src="./src/js/main.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
